@@ -10,7 +10,6 @@
 .. _pytest: http://pypi.python.org/pypi/pytest
 .. _mercurial: http://mercurial.selenic.com/wiki/
 .. _`setuptools`: http://pypi.python.org/pypi/setuptools
-
 .. _`easy_install`:
 .. _`distribute docs`:
 .. _`distribute`: http://pypi.python.org/pypi/distribute
