@@ -1,4 +1,4 @@
-Writing, managing and understanding plugins
+Working with plugins and conftest files
 =============================================
 
 .. _`local plugin`:
@@ -11,6 +11,7 @@ py.test implements all aspects of configuration, collection, running and reporti
 
 .. _`pytest/plugin`: http://bitbucket.org/hpk42/pytest/src/tip/pytest/plugin/
 .. _`conftest.py plugins`:
+.. _`conftest.py`:
 
 conftest.py: local per-directory plugins
 --------------------------------------------------------------
@@ -53,6 +54,7 @@ earlier than further away ones.
     conftest.py file.
 
 .. _`external plugins`:
+.. _`extplugins`:
 
 Installing External Plugins / Searching
 ------------------------------------------------------
@@ -64,9 +66,26 @@ tool, for example::
     pip uninstall pytest-NAME
 
 If a plugin is installed,  py.test automatically finds and integrates it,
-there is no need to activate it.  If you don't need a plugin anymore simply
-de-install it.  You can find a list of available plugins through a
-`pytest- pypi.python.org search`_.
+there is no need to activate it.  Here is a list of known plugins:
+
+* `pytest-capturelog <http://pypi.python.org/pypi/pytest-capturelog>`_:
+  to capture and assert about messages from the logging module
+
+* `pytest-xdist <http://pypi.python.org/pypi/pytest-xdist>`_:
+  to distribute tests to CPUs and remote hosts, looponfailing mode,
+  see also :ref:`xdist`
+
+* `pytest-cov <http://pypi.python.org/pypi/pytest-cov>`_:
+  coverage reporting, compatible with distributed testing
+
+* `pytest-pep8 <http://pypi.python.org/pypi/pytest-pep8>`_:
+  a ``--pep8`` option to enable PEP8 compliancy checking.
+
+* `oejskit <http://pypi.python.org/pypi/oejskit>`_:
+  a plugin to run javascript unittests in life browsers
+  (**version 0.8.9 not compatible with pytest-2.0**)
+
+You may discover more plugins through a `pytest- pypi.python.org search`_.
 
 .. _`available installable plugins`:
 .. _`pytest- pypi.python.org search`: http://pypi.python.org/pypi?%3Aaction=search&term=pytest-&submit=search
@@ -170,11 +189,41 @@ the plugin manager like this:
 If you want to look at the names of existing plugins, use
 the ``--traceconfig`` option.
 
+.. _`findpluginname`:
+
+Finding out which plugins are active
+----------------------------------------------------------------------------
+
+If you want to find out which plugins are active in your
+environment you can type::
+
+    py.test --traceconfig
+
+and will get an extended test header which shows activated plugins
+and their names. It will also print local plugins aka
+:ref:`conftest.py <conftest>` files when they are loaded.
+
+.. _`cmdunregister`:
+
+deactivate / unregister a plugin by name
+----------------------------------------------------------------------------
+
+You can prevent plugins from loading or unregister them::
+
+    py.test -p no:NAME
+
+This means that any subsequent try to activate/load the named
+plugin will it already existing.  See :ref:`findpluginname` for
+how to obtain the name of a plugin.
 
 .. _`builtin plugins`:
 
 py.test default plugin reference
 ====================================
+
+
+You can find the source code for the following plugins
+in the `pytest repository <http://bitbucket.org/hpk42/pytest/>`_.
 
 .. autosummary::
 
@@ -195,7 +244,7 @@ py.test default plugin reference
     _pytest.recwarn
     _pytest.resultlog
     _pytest.runner
-    _pytest.session
+    _pytest.main
     _pytest.skipping
     _pytest.terminal
     _pytest.tmpdir
@@ -288,14 +337,14 @@ Reference of important objects involved in hooks
 .. autoclass:: _pytest.config.Parser
     :members:
 
-.. autoclass:: _pytest.session.Node(name, parent)
+.. autoclass:: _pytest.main.Node(name, parent)
     :members:
 
 ..
-    .. autoclass:: _pytest.session.File(fspath, parent)
+    .. autoclass:: _pytest.main.File(fspath, parent)
         :members:
 
-    .. autoclass:: _pytest.session.Item(name, parent)
+    .. autoclass:: _pytest.main.Item(name, parent)
         :members:
 
     .. autoclass:: _pytest.python.Module(name, parent)
@@ -312,5 +361,4 @@ Reference of important objects involved in hooks
 
 .. autoclass:: _pytest.runner.TestReport
     :members:
-
 
