@@ -68,7 +68,7 @@ commands=
 [pytest]
 minversion=2.0
 plugins=pytester
-addopts= -rxf --pyargs --doctest-modules --ignore=.tox
+#addopts= -rxf --pyargs --doctest-modules --ignore=.tox
 rsyncdirs=tox.ini pytest.py _pytest testing
 python_files=test_*.py *_test.py
 python_classes=Test Acceptance
